fix(cms): removed flicker of dynamic content (#263)

--- a/src/client/app/not-found/not-found.component.scss
+++ b/src/client/app/not-found/not-found.component.scss
@@ -20,4 +20,8 @@
     flex-direction: column;
     padding: 1em;
   }
+  ::ng-deep dynamic-html {
+    display: flex;
+    height: 100%;
+  }
 }
